# turtle_control

./: CMakeLists.txt  README.md  package.xml
action/: Move.action
launch/: turtle_avoid_wall.launch.py  turtle_catcher.launch.py
msg/: MessageCounter.msg
scripts/: avoid_wall.py  counter.py  edc.py  eds.py  move_action_server.py  stop_robot_client.py  turtle_catcher.py
src/: avoid_wall.cpp  catch_turtle.cpp  counter.cpp  euclidean_distance_client.cpp  euclidean_distance_server.cpp  move_action_server.cpp  move_linear.cpp  rotate.cpp  stop_robot_server.cpp  triangle.cpp
srv/: Stop.srv
